--- a/index.html
+++ b/index.html
@@ -1,31 +1,25 @@
-█████████████████████████████████████
-█████████████░░░░░░░█████████████████
-██████████░░░░░░░░░░░░░░█████████████
-█████████░░░░░████████░░░████████████
-████████░░██████████████░░░██████████
-███████░█████████████████░░░█████████
-██████░███████████████░░██▒░░████████
-█████░░████████░███░░█░░░░█░░░███████
-█████░░████░░░░░███░██░░░░░█░░███████
-█████░░███░░█░░░███░███▓▓▓▓██░░██████
-█████░░████▒████████░███████░░█░█████
-██████░█████████████░██████░░░░██████
-████████████████▒░█░░░██████░░░░█████
-█████░██████████████░░██████░░░░█████
-█████░█░█░███████░░███░█████░░███████
-███████░██████████████████░░░░░██████
-███████████░█████████████░░░░░░░░░░░█
-█████████████░████████░░░░░░░░░░░░░░█
-█████████████░██░░░░░░░░░░░██░░░░░░░█
-████████░░░░░░░████░░░░░░███░░░░░░░░█
-█████░░░░░░░░░░█████░░░████░░░░░░░░░█
-██░░░░░░░░░░░░░░████░██████░░░░░░░░░█
-█░░░░░░░░░░░░░░░██████████░░░██░██░░█
-█░░░░░░░░░░░░░░░██████░██░░░░█████░░█
-█░░░░░░░░░░░░░░░░████████░░░░░░█░░░░█
-█░░██░░░██░░██████░░██████░░██████░░█
-█░░██░░░██░██░░░░██░██░░███░██░░░░░░█
-█░░███████░██░░░░██░███████░██████░░█
-█░░██░░░██░███░░███░██░░░░░░██░░░░░░█
-█░░██░░░██░░██████░░██░░░░░░██████░░█
-█░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░█
+<style>
+body { white-space: pre }
+</style>
+<a href="http://github.com/rupa">
+                 .   'u
+                 `?x '!?c
+                  X!?d!!!!t
+          :*"!"#%mU!!!!!!!!M
+     M%L #!!!!!!!!!!!!!!!!!!k
+   ...k!!!!!!!!!!!!!!!!!!!!!X
+   "i!!!!!(z++iL!!!!!!!!!!!!X
+     `:!!!!!c      ""%mmm+m"
+    '!!!!!!?   x""^"x   u=**u
+     X!!!!!!M X      t&gt;.   . %
+     'L!!!!!! X  '   X'h.    X
+       "tumi!&gt; %.  .f     "mM
+         !R%           +u..M'L
+         'L                  'L
+            X                  %
+            !     d$$$$$`F"````
+           u@    ?iuu9$*(
+       .ud!!!&gt;         M!t
+  uM?!!!!X!!!?i      .u!!!N!Ts
+:R!!!!!!!!6!!!!t ``   '!!!!&amp;!!!k
+</a>
