--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <style>
-body { white-space: pre }
+body { white-space: pre; font-family:monospace }
+a { text-decoration: none; color: blue }
+#fry { position: absolute; right: 20; bottom: 20 }
 </style>
+<div id="fry">
 <a href="http://github.com/rupa">
                  .   'u
                  `?x '!?c
@@ -10,16 +13,17 @@ body { white-space: pre }
    ...k!!!!!!!!!!!!!!!!!!!!!X
    "i!!!!!(z++iL!!!!!!!!!!!!X
      `:!!!!!c      ""%mmm+m"
-    '!!!!!!?   x""^"x   u=**u
-     X!!!!!!M X      t&gt;.   . %
+    '!!!!!!?   x""^"x   u=**u</a>
+<a href="http://31d1.com">     X!!!!!!M X      t&gt;.   . %
      'L!!!!!! X  '   X'h.    X
        "tumi!&gt; %.  .f     "mM
          !R%           +u..M'L
          'L                  'L
             X                  %
             !     d$$$$$`F"````
-           u@    ?iuu9$*(
-       .ud!!!&gt;         M!t
+           u@    ?iuu9$*(</a>
+<a href="http://un.ix.io">       .ud!!!&gt;         M!t
   uM?!!!!X!!!?i      .u!!!N!Ts
 :R!!!!!!!!6!!!!t ``   '!!!!&amp;!!!k
 </a>
+</div>
