--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <style>
-body { white-space: pre; font-family:monospace }
+body { white-space: pre; 
+       font-family: Deja Vu Sans Mono, Monaco, Consolas, monospace; }
 a { text-decoration: none; color: blue }
 #fry { position: absolute; right: 20; bottom: 20 }
 </style>
