--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <style>
+* { margin: 0 }
+a { text-decoration: none; color: blue }
 body { white-space: pre; 
        font-family: Deja Vu Sans Mono, Monaco, Consolas, monospace; }
-a { text-decoration: none; color: blue }
-#fry { position: absolute; right: 20; bottom: 20 }
+img { width:100% }
+#fry { position: fixed; right: 20; bottom: 20 }
 </style>
 <div id="fry">
 <a href="http://github.com/rupa">
