--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <style>
 * { margin: 0 }
 a { text-decoration: none; color: blue }
-    font-family: Deja Vu Sans Mono, Monaco, Consolas, monospace; }
+body { font-family: Deja Vu Sans Mono, Monaco, Consolas, monospace; }
 img { width:100% }
 #fry { white-space: pre; 
        position: fixed; right: 20; bottom: 20 }
