--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 * { margin: 0 }
 a { text-decoration: none; color: blue }
 body { font-family: Deja Vu Sans Mono, Monaco, Consolas, monospace; }
-img { width:100% }
+img { width:100%;
+      height: 100% }
 #fry { white-space: pre; 
        position: fixed; right: 20; bottom: 20 }
 </style>
