opacity and css cleanup

--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <style>
-* { margin: 0 }
-a { text-decoration: none; color: blue }
-body { font-family: Deja Vu Sans Mono, Monaco, Consolas, monospace; }
-img { width:100%;
-      height: 100% }
-#fry { white-space: pre; 
-       position: fixed; right: 20; bottom: 20 }
+* {
+    margin: 0;
+}
+a {
+    text-decoration: none;
+    color: blue;
+}
+body {
+    font-family: "Deja Vu Sans Mono", Monaco, Consolas, monospace;
+}
+img {
+    width:100%;
+    height: 100%;
+    opacity: 0.1;
+    filter: alpha(opacity=10);
+}
+#fry {
+    white-space: pre; 
+    position: fixed;
+    right: 20;
+    bottom: 20;
+}
 </style>
 <div id="fry">
 <a href="http://github.com/rupa">
