--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@ img {
     width:100%;
     height: 100%;
     opacity: 0.1;
+    filter: alpha(opacity=10);
 }
 #fry {
     white-space: pre;
-    position: fixed;
+    position: absolute;
     right: 20;
     bottom: 20;
+    z-index: 10;
 }
 </style>
 <div id="fry">
