--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<html>
+<head>
+<title>
+</title>
 <style>
 * {
     margin: 0;
@@ -23,6 +27,8 @@ img {
     z-index: 10;
 }
 </style>
+</head>
+<body>
 <div id="fry">
 <a href="http://github.com/rupa">
                  .   'u
@@ -47,5 +53,6 @@ img {
 :R!!!!!!!!6!!!!t ``   '!!!!&amp;!!!k
 </a>
 </div>
-
 <img width="100%" src="rickroll.gif">
+</body>
+</html>
